fix screen overflow

--- a/www/style.sass
+++ b/www/style.sass
@@ -94,6 +94,7 @@ i
               background-color: #FFB74D
               border-radius: 2px
               margin-bottom: 13px
+              overflow: hidden
               b
                 font-weight: 500
               .sub-title
